README: document Inno Setup installer + dev workflow + release pipeline
Replaces stale install4j references with the actual current toolchain:

  * New 'Windows installer' section: payload layout, build instructions,

    behavior (per-user, file assoc, legacy AppId), unsigned caveat

  * New 'Release workflow (CI)' section: documents .github/workflows/

    release.yml end-to-end and how to cut a release

  * Updated artifacts table: removed mac/linux installer rows, replaced

    'install4j-build' line with the Inno Setup .exe row

  * Updated 'Run the packaged launcher' section to explain why the bare

    appassembler bat fails standalone (no JavaFX in stock Temurin) and

    point users at the installer / scripts/run.ps1

  * Added installer/ and release.yml to the upstream-sync conflict list